# opdroid

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  ui.xml
src/android_controller/: __init__.py  __main__.py  agent.py  client.py  grid.py  main.py  mcp_server.py  tools.py  ui_hierarchy.py  utils.py
tests/: demo_screenshot.py
