[project]
name = "android-use"
version = "0.1.0"
description = "LLM-controlled Android device automation via ADB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adbutils>=2.0.0",
    "litellm>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android_controller"]

[project.scripts]
android-use = "android_controller.main:app"
